--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@vercel/speed-insights": "^1.2.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.1",
     "lucide-react": "^0.510.0",
